@@ -11,6 +11,8 @@ For a complete change history, please see the Subversion log comments.
 
 Current Version (SVN trunk):
 ----------------------------
+- Refactor legend icon drawing (remove renderer specific versions)
+  Add label styling or markers for annotation layer legend icons (#2917)
 
 Version 5.4.0-beta3 (2009-3-5):
 --------------------------------
